--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "ejs": "^3.1.6",
-    "gulp-cssnano": "^2.1.3"
+    "gulp-cssnano": "^2.1.3",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.3"
   }
 }
