--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "postcss": "^8.3.5"
   },
   "dependencies": {
+    "caniuse-db": "^1.0.30001441",
+    "caniuse-lite": "^1.0.30001441",
     "ejs": "^3.1.6",
     "gulp-cssnano": "^2.1.3",
     "gulp-rename": "^2.0.0",
