--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "body-parser": "^1.20.2",
     "caniuse-db": "^1.0.30001441",
     "caniuse-lite": "^1.0.30001441",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.18.2",
     "express-mysql-session": "^2.1.8",
@@ -42,9 +44,10 @@
     "gulp-replace": "^1.1.3",
     "helmet": "^6.0.1",
     "html": "^1.0.0",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
     "passport": "^0.6.0",
     "passport-openidconnect": "^0.1.1",
-    "roboto-fontface": "^0.10.0"
+    "roboto-fontface": "^0.10.0",
+    "uuid": "^9.0.0"
   }
 }
